src/styles/sell.css
.b-sell {
  display: flex;
  font-size: 21px;
  font-weight: bold;
  height: 100%;
}

.b-sell__title {
  background-color: #2c3e50;
  color: #fff;
  height: 75px;
  position: absolute;
  text-align: center;
  width: 100%;
  z-index: 10;

  > span {
    display: inline-block;
    padding-top: 20px;
    font-size: 28px;
  }
}

.b-sell__title__priceType {
  cursor: pointer;
  height: 75px;
  padding: 20px;
  position: absolute;
  right: 0;
  top: 0;
  font-size: 28px;
}

.b-sell__title__back {
  cursor: pointer;
  font-size: 46px;
  height: 75px;
  left: 0;
  padding: 5px 20px 20px 20px;
  position: absolute;
  text-decoration: none;
  top: 0;
}

.b-sell__title__priceType--switched {
  background-color: #16a085;
}

.b-sell__page {
  display: flex;
  height: 100%;
  padding-top: 75px;
}

.b-sell__page__wrap {
  display: flex;
  flex: 1;
  flex-direction: column;
}

.b-sell__page__tabs {
  display: flex;
}

.b-sell__page__tabs__tab {
  background-color: #35415b;
  color: #ffe500;
  cursor: pointer;
  flex: 1;
  height: 42px;
  line-height: 31px;
  padding: 5px 10px;
  text-align: center;
}

.b-sell__page__tabs__tab--active {
  background-color: #ffe500;
  color: #35415b;
}

.b-sell__page__items {
  align-content: flex-start;
  display: flex;
  background-color: rgba(52, 73, 94, 0.5);
  flex: 1;
  flex-wrap: wrap;
  overflow-y: overlay;
}

.b-sell__page__overflow {
  height: calc(100% - 100px);
  overflow-y: auto;
}

